style.css
body {
  background-color: black;
  font-family: 'Abhaya Libre', serif;
  color: #F2ECE1;
  cursor: none;
/*  padding: 50px;*/
}
a {
  text-decoration: none;
  cursor: pointer;
  color: #F2ECE1;
}
a:hover {
  text-decoration: none;
  color: #F2ECE1;
  opacity: 0.6;
}

#videoBG{
width: 100%;
height: 100vh;
object-fit: cover;
position: fixed;
top: 0;
right: 0;
bottom: 0;
left: 0;
overflow: hidden;
z-index: -500;
background-size: 100%;

}

@media (min-aspect-ratio: 16/9) {
    #videoBG {
        width:100%;
        height: 100vh;
    }

}

@media (max-aspect-ratio: 16/9) {
    #videoBG {
        width:auto;
        height: 100%;
    }
}


.biggest-container-ever {
    margin: 10% auto;
}

@media (max-width: 576px) {
  .biggest-container-ever {
    width: 300%;
  }
   #videoBG {
        width:100%;
        height: 100vh;
    }
}
.navbar {
  background-color: transparent;
  transition: 0.5s background-color ease;
  border-bottom: 1px solid;
/*  border-color: #F2ECE1;*/
  padding: 10px;
  margin-bottom: 100px;
  text-align: right;
  color: transparent;
}

.split-container {
  display: flex;
  justify-content: space-between;
}

.main-container {
  margin-bottom: 130px;
  margin-left: 30px;
  margin-right: 10px;
  width: 110%;
}

.ellipse-container {
  display: flex;
  position: relative;
  align-items: center;
}
.description-ellipse {
  background-color: #3A2E3C;
  opacity: 0.8;
  width: 75%;
  height: 300px;
  position: absolute;
  left: 105px;
  border-radius: 3%;
  text-align: center;
  color: #F2ECE1;
  padding-top: 10px;
  padding-left: 14px;
  padding-right: 24px;
  padding-bottom: 20px;
  overflow: scroll;
}

.description1 p {
  font-size: 1.5em;
  font-weight: 800;
  margin-bottom: 5px;
}

.description2 {
  display: flex;
  margin-top: 2%;
}
.empty-box {
  padding-right: 30%;
  border-radius: 50%;

}
.blah-blah {
  padding: 5px;
}

.description3 {
  text-align: center;
  margin-top: 3%;
}
.description3 i {
  margin: 2px;
}
.description3 i:hover {
  opacity: 60%;
  font-size: 3em;
  cursor: pointer;
}

.avatar-ellipse {
  position: relative;
}

.me {
  position: absolute;
  left: 21px;
  top: 20px;
  width: 245px;

}
#ellipse-text {
  background-color: #ab9376;
  opacity: 0.6;
  border-radius: 100%;
  padding: 2px;
  font-family: 'Abhaya Libre', serif;
  font-weight: 800;
}
#ellipse-text span {
  position: absolute;
  transform-origin: top left;
  color: white;
}
.avatar {
  object-fit: cover;
  width: 82%;
  border-radius: 50%;
  transform: rotate(6deg);
  opacity: 0.8;
}

.branch-div {
  opacity: 70%;
  position: absolute;
  top: 92px;
  left: 0;
}

.branch {
  transform: rotate(-74deg);
  width: 132px;
}



.nav-wrapper {
    width: 100%;
    background: transparent;
    position: absolute;
    top: 10%;
    margin: 0 auto;
    left: 30%;
}

.navvs {
      width: 100%;
      text-align: center;

}

.hover-this {
      transition: all 0.3s ease;
}

.p-stain {
      display: inline-block;
      font-weight: 300;
      color: white;
      opacity: 0.9;
      font-size: 40px;
      text-transform: uppercase;
      pointer-events: none;
      transition: transform 0.1s linear;
}

.cursor {
      pointer-events: none;
      position: fixed;
      padding: 0.3rem;
      background-color: #fff;
      opacity: 0.7;
      border-radius: 50%;
      mix-blend-mode: difference;
      transition: transform 0.3s ease;
}

.hover-this:hover ~ .cursor {
      transform: translate(-50%, -50%) scale(8);
}

@media(min-width: 900px) {
      .navvs {
            display: flex;
            justify-content: space-around;
      }
}

@media(max-width: 576px) {
      .nav-wrapper {
            left: 183%;
      }

      .hover-this {
            width: 100%;
            padding: 10px 0;
            display: inline-block;
      }
}
@media (max-aspect-ratio: 16/9) {
        .nav-wrapper {
        top: 5%;
    }
}


.main-container-2 {
  position: relative;
  width: 100%;
  margin-left: 4%;
  margin-right: 4%;
  cursor: pointer;
  overflow: scroll;
}

.all-projects {
  display: flex;
  justify-content: space-between;
  width: 190%;
}


.project {
  width: 100%;
  width: 45%;
/*  float: left;*/
/*  margin-right: 5%;*/
  border-radius: 10px;
  display: none;
  margin-right: 2%;
}

.project__image {
  display: block;
  position: relative;
  border-radius: 10px;
}

.project__image img {
  width: 100%;
  max-width: 100%;
  display: block;
  opacity: 0.8;
  border-radius: 10px;
  object-fit: cover;
}

.project__image:after {
  content: " ";
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.4));
  transition: opacity .3s ease;
  border-radius: 10px;
}
.project__title{
  font-family: 'Poppins', sans-serif;
  color: #88cbc2;
}
.project__card {
  position: relative;
  will-change: transform;
  transition: box-shadow .3s ease;
  box-shadow: 0 10px 30px transparent;
}

.project__card.hover-in {
  transition: -webkit-transform .2s ease-out;
  transition: transform .2s ease-out;
  transition: transform .2s ease-out, -webkit-transform .2s ease-out;
}

.project__card.hover-out {
  transition: -webkit-transform .2s ease-in;
  transition: transform .2s ease-in;
  transition: transform .2s ease-in, -webkit-transform .2s ease-in;
}

.project:hover .project__card { box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4); }

.project:hover .project__image:after { opacity: 1; }

.project:hover .project__detail {
  border-width: 10px;
  border-radius: 10px;
  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
}

.project:hover .project__title, .project:hover .project__category {
  -webkit-transform: translateY(0) scale(1);
  -ms-transform: translateY(0) scale(1);
  transform: translateY(0) scale(1);
  opacity: 1;
}

.project__detail {
  position: absolute;
  left: 30px;
  right: 30px;
  top: 30px;
  bottom: 30px;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  pointer-events: none;
  -webkit-transform: translateZ(30px);
  transform: translateZ(30px);
  border: 0 solid #F2ECE1;
  transition: border .4s ease;
  border-radius: 10px;
}

.project__title {
  margin: 0 0 10px;
  font-size: 36px;
  font-weight: 700;
  transition: .4s ease;
  -webkit-transform: translateY(40px) scale(0);
  -ms-transform: translateY(40px) scale(0);
  transform: translateY(40px) scale(0);
  will-change: transform;
}


.project__category {
  opacity: 0;
  transition: .4s ease;
  transition-delay: .1s;
  -webkit-transform: translateY(40px) scale(0);
  -ms-transform: translateY(40px) scale(0);
  transform: translateY(40px) scale(0);
  will-change: transform;
}

.project__category br {
  color: rgba(255, 255, 255, 0.8);
  font-size: 0.5em;
}

@media(max-width: 576px) {
      .main-container-2 {
        margin-left: 10%;
      }
      .all-projects {
        width: 300%;
      }
      .description-ellipse {
      height: 350px;
      position: absolute;
      left: 99px;
      border-radius: 3%;
      text-align: center;
      color: #F2ECE1;
      padding-top: 10px;
      padding-left: 37px;
      padding-right: 24px;
      padding-bottom: 20px;
      overflow: scroll;
      }
}

.skills-container {
  display: flex;
}
.skills-box {
  display: none;
  animation: 1s fadeIn;
  animation-fill-mode: forwards;
  visibility: hidden;
  width: 50%;
}
.title-skills {
  text-align: center;
  margin-left: 100px;
  margin-right: 10px;
}
div .wrapper {
/*  transform: translate(-50%, -50%);*/
}
div svg {
  height: auto;
  width: 40%;
/*  margin: 0 2rem;*/
  cursor: pointer;
  overflow: visible;
}
div svg polygon, div svg path {
  transition: all 0.5s cubic-bezier(0.2, 1, 0.3, 1);
  fill: #F2ECE1;
}
div svg:hover polygon, div svg:hover path {
  transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
  fill: #F2ECE1;
}
div svg:hover .arrow {
  animation: arrow-anim 2.5s cubic-bezier(0.2, 1, 0.3, 1) infinite;
}
div svg:hover .arrow-fixed {
  animation: arrow-fixed-anim 2.5s cubic-bezier(0.2, 1, 0.3, 1) infinite;
}

@keyframes arrow-anim {
  0% {
    opacity: 1;
    transform: translateX(0);
  }
  5% {
    transform: translateX(-0.1rem);
  }
  100% {
    transform: translateX(1rem);
    opacity: 0;
  }
}
@keyframes arrow-fixed-anim {
  5% {
    opacity: 0;
  }
  20% {
    opacity: 0.4;
  }
  100% {
    opacity: 1;
  }
}

.needtofixthis {
  color: transparent;
}
.flexy-container {
  display: flex;
  justify-content: space-between;
  height: 45%;
  overflow: scroll;
  cursor: none;
  padding-right: 10px;
}
.skills {
  margin-right: 5px;
  margin-left: 5px;
  width: 100%;
}
.mouse-scroll {
 display: none;
}
.flexy-container:hover .mouse-scroll {
  display: block;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    visibility: visible;
    opacity: 1;
  }
}

/*.footer {
  text-align: center;
  font-size: 0.8em;
  position: absolute;
  bottom: 0;
  margin: 0 auto;
  width: 100%;
}*/

